--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,7 @@
-body {
-    background: blue;
-}
+@import "config/fonts";
+@import "config/variables";
+@import "config/mixins";
+@import "config/settings";
+
+@import "components/header";
+@import "components/hero";
